--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource-variable/onest": "^5.0.2",
     "@mui/icons-material": "^5.3.0",
     "@mui/lab": "^5.0.0-alpha.96",
     "@mui/material": "^5.3.0",
